# muckr-api

./: .bumpversion.cfg  .coveragerc  .env.sample  .gitignore  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  app.json  bumpversion.sh  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  noxfile.py  postgres.yml  pyproject.toml  setup.cfg  setup.py  wsgi.py
migrations/: env.py  script.py.mako
migrations/versions/: 14e67e8e4248_users.py  17b2d9bb4a15_venues.py  38a6b4811501_user_is_admin.py  44dfd4599764_rename_users_table.py  457d6ca5ae88_artists.py  91cf97f543f6_tokens.py  97089ffc8c1f_artists_belong_to_users.py  a84bc26c065d_artists_user_id_not_nullable.py
muckr/: app.py  commands.py  config.py  errors.py  extensions.py  models.py  utils.py
muckr/artist/: models.py  views.py
muckr/main/: __init__.py  views.py
muckr/user/: auth.py  models.py  views.py
muckr_service/: __init__.py  app.py  database.py  models.py  monkeypatch.py
muckr_service/main/: __init__.py  routes.py
nginx/: nginx.conf
requirements/: base.in  base.txt  dev.in  dev.txt  tests.in  tests.txt
scripts/: http.sh
src/muckr/: app.py  commands.py
src/muckr_api/: __main__.py  app.py  client.py  commands.py  errors.py  utils.py
tests/: __init__.py  config.py  conftest.py  factories.py  test_app.py  test_commands.py  test_config.py  test_errors.py  test_main.py  test_models.py  test_views.py  utils.py
tests/artist/: conftest.py  factories.py  fixtures.py  test_models.py  test_views.py
tests/main/: __init__.py  (+1 more)
(+30 files in other folders)
