[tool.poetry]
name = "muckr-api"
version = "0.7.0"
description = "muckr API"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
homepage = "https://github.com/cjolowicz/muckr-api"
repository = "https://github.com/cjolowicz/muckr-api.git"
keywords = ["muckr", "api"]
readme = "README.md"
include = ["CHANGELOG.md"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
click = "^7.0"
environs = "^5.2"
flask = "^1.1"
flask-bcrypt = "^0.7.1"
flask-cors = "^3.0"
flask-httpauth = "^3.3"
flask-migrate = "^2.5"
flask-sqlalchemy = "^2.4"
gunicorn = "^19.9"
httpie = {version = "^1.0", optional = true}
marshmallow = "^3.0.0"
psycopg2-binary = "^2.8"
python = "^3.7"
requests = "^2.22"
tenacity = "^5.1.1"

[tool.poetry.dev-dependencies]
factory-boy = "^2.12"
pytest = "^3.0"
pytest-cov = "^2.7"
pytest-mock = "^1.10"

[tool.poetry.extras]
httpie = ["httpie"]

[tool.poetry.scripts]
muckr-api = "muckr_api.__main__:main"

[build-system]
requires = ["poetry==1.0.0b1"]
build-backend = "poetry.masonry.api"
